fix table alignment

--- a/main.css
+++ b/main.css
@@ -12,6 +12,10 @@ h3 {
     border-bottom: solid 2px rgb(117, 115, 115);
 }
 
+th {
+    text-align: left;
+}
+
 .title {
     background-color: #dddddd;
     padding: 30px 10px 30px 24px;
